add react router

--- a/src/styles/variable.scss
+++ b/src/styles/variable.scss
@@ -11,8 +11,12 @@ $bg: rgb(244, 244, 255);
 $lgBlue:rgb(97, 219, 251);
 $policeBlue:rgb(52, 73, 94);
 $mint:rgba(65, 184, 131);
-$green:rgb(18, 246, 143);
 $pink:rgb(233, 30, 99);
+// neon pallet color
+$black:rgb(0, 0, 0);
+$green:rgb(22, 255, 0);
+$yellow:rgb(255, 237, 0);
+$navy:rgb(15, 98, 146);
 // spacing
 $spacing-md: 16px;
 $spacing-lg: 32px;
