--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -7,7 +7,7 @@
 
 body{
     width: 100%;
-    color: $mint;
+    color: $green;
     background-color: $dark;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
