--- a/src/styles/base/_layout.scss
+++ b/src/styles/base/_layout.scss
@@ -4,6 +4,13 @@
     background-color: inherit;
     height: 100vh;
     width: 100%;
+    display: flex;
+    &_left{
+        width:40%;
+    }
+    &_right{
+        width: 60%;
+    }
 }
 #cursor-shadow {
     position: absolute;
