--- a/src/styles/base/_layout.scss
+++ b/src/styles/base/_layout.scss
@@ -1,6 +1,8 @@
 @import '../variable.scss';
 
 .layout {
+    top:0;
+    left: 0;
     background-color: inherit;
     height: 100vh;
     width: 100%;
@@ -9,6 +11,8 @@
         width:40%;
     }
     &_right{
+        display: block;
+        overflow: hidden scroll;
         width: 60%;
     }
 }
